--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <meta name="email" content="920825209@qq.com"/>
     <meta name="Description" content="习悦校招答题 习悦校招答题"/>
 
-    <title>西安习悦信息技术有限公司之谯美美与习悦的故事</title>
-
+    <title>习悦与谯美美</title>
 
     <link rel="stylesheet" type="text/css" href="dist/css/all-min.css"/>
 
@@ -157,7 +156,7 @@
 
                             <ul class="ib list-info  info-02">
                                 <li class="text-center">
-                                    <i class="trans-right white trans ib"></i><span>谯美美是时刻关心你的习悦人力</span>
+                                    <i class="trans-right white trans ib"></i><span>谯美美是时刻关心你的习悦伙伴</span>
                                 </li>
                                 <li class="text-center">
                                     <span>，她会时刻给你创造惊喜哦~</span>
