--- a/question.html
+++ b/question.html
@@ -17,7 +17,7 @@
     <meta name="email" content="920825209@qq.com"/>
     <meta name="Description" content="习悦校招答题 习悦校招答题"/>
 
-    <title>西安习悦信息技术有限公司之谯美美与习悦的故事</title>
+    <title>习悦与谯美美</title>
     <link rel="stylesheet" type="text/css" href="src/css/common/normalize.css"/>
 
 
@@ -108,6 +108,7 @@
 </script>
 <!-- 结果层 -->
 <div class="layer-result  text-center "  style="display:  none;" id="layer-result">
+    <i class="ib all-img shareHand"></i>
     <i class="ib all-img layer-result-img"></i>
     <div class="layer-result-content">
         <h1 style="font-size: 25px; margin-bottom: -8px;"></h1>
